# Comp-Graf

./: .gitignore  CMakeLists.txt  README.md
include/: cilinder.h  circle.h  cylinder.h  disk.h  disk3d.h  polygon.h  ponteiro.h  shader.h  shape.h  triangle.h
shaders/: fragment.glsl  vertex.glsl
shaders/2d/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  circle.cpp  error.cpp  main.cpp  main_2d.cpp  main_3d.cpp  main_gpgpu.cpp  polygon.cpp  ponteiro.cpp  scene_3d.cpp  shader.cpp  solar.cpp  test0-glfw.cpp  triangle.cpp
src/scenegraph/: framebuffer.cpp  image.cpp  state.cpp
src/scenegraph/luxor/: animation.cpp  animation.h  cubicinterpolator.cpp  cubicinterpolator.h  interpolator.h  linearinterpolator.cpp  linearinterpolator.h  luxor.cpp  luxor.h  luxorengine.cpp  luxorengine.h  movement.cpp  movement.h
src/shapes/: circle.cpp  cylinder.cpp  disk.cpp  disk3d.cpp  polygon.cpp  ponteiro.cpp  triangle.cpp
